Added `GET /averages`
