# config/routes.rb
@@ -3,4 +3,6 @@ Rails.application.routes.draw do
   mount Rswag::Api::Engine => '/api-docs'
   # For details on the DSL available within this file, see https://guides.rubyonrails.org/routing.html
   resources :responses, only: [:create, :index]
+
+  get '/averages', to: 'responses#averages'
 end
