# swagger/v1/swagger.yaml
@@ -92,3 +92,28 @@ paths:
                   required:
                   - questionId
                   - body
+  "/averages":
+    get:
+      summary: list averages
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: successful
+          schema:
+            type: object
+            properties:
+              questionAverages:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    questionId:
+                      type: integer
+                      example: 1
+                    averageScore:
+                      type: number
+                      example: 4.0
+                  required:
+                  - questionId
+                  - averageScore
